welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:4: error: unclosed character literal
  var direction = 'gauche'
                         ^ZigZag:27: error: unclosed character literal
    if (direction == 'gauche') {
                            ^ZigZag:36: error: unclosed character literal
        direction = 'droite'
                           ^ZigZag:39: error: unclosed character literal
    if (direction == 'droite') {
                            ^ZigZag:48: error: unclosed character literal
        direction = 'gauche'
                           ^ZigZag:4: error: unclosed character literal
  var direction = 'gauche'
                         ^ZigZag:4: error: ';' expected but something found.
  var direction = 'gauche'
                         ^ZigZag:27: error: unclosed character literal
    if (direction == 'gauche') {
                            ^ZigZag:27: error: ')' expected but something found.
    if (direction == 'gauche') {
                            ^ZigZag:36: error: unclosed character literal
        direction = 'droite'
                           ^ZigZag:39: error: unclosed character literal
    if (direction == 'droite') {
                            ^ZigZag:48: error: unclosed character literal
        direction = 'gauche'
                           ^ZigZag:51: error: Missing closing brace `}' assumed here
} 
^ZigZag:55: error: ';' expected but 'def' found.
	override def forward(i:Int)  { 
                 ^